# zebra-browser-print-linux

./: Cargo.toml  README.md  makefile  zebra-browser-print.service
examples/: offsets.zpl  print.rs  query.rs  test.zpl
src/: device.rs  find_devices.rs  lib.rs  main.rs  print.rs
