[package]
name = "zebra-browser-print"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
axum = "0.8.9"
serve = "0.0.1"
serde = { version = "1.0.228", features = ["derive"] }
tower-http = { version = "0.7.0", features = ["cors"] }
cmd_lib = "2.0.0"
serde_json = "1.0.150"
